Servers/UI/OJS.Servers.Ui/ClientApp/src/components/submissions/details/submission-result-details/SubmissionResultsDetails.module.scss
@use 'src/styles/colors';
@use 'src/styles/fonts';

.submissionResultDetailsWrapper {
  align-items: center;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.submissionResultDetails {
  border-bottom: 1px solid #bebebe;
  display: flex;
  flex-direction: column;
  font-family: fonts.$font-family-lato;
  margin-top: 30px;
  padding-bottom: 30px;
  width: 80%;
}

.showInputButton {
  align-items: center;
  align-self: flex-start;
  background-color: colors.$light-blue-color;
  border: 0;
  color: colors.$white-color;
  cursor: pointer;
  display: flex;
  justify-content: center;
  margin: 15px 0;
  padding: 3px 10px;

  div {
    margin-left: 10px;
    margin-right: -6px;
  }
}

.showDetailsButton {
  background-color: colors.$light-blue-color;
  border: 0;
  color: colors.$white-color;
  cursor: pointer;
  display: inline-block;
  margin: 15px 0;
  padding: 5px 10px;
  width: 10%;
}

.warningBlockWrapper {
  background-color: #d3d3d3;
  max-height: 200px;
  overflow: auto;
  padding: 10px 20px;
}

